# boost.outcome-motivational-example

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  outcome-helper.hpp
include/outcome/: outcome-register.hpp  outcome.hpp
src/: CMakeLists.txt  error.cpp  error.hpp  main.cpp
